<resources>
    <string name="app_name">WinlowCustomer</string>
    <string name="welcome_animation_text" translatable="false">Welcome to WinloSpices</string>
    <string name="type_location">Enter Address</string>
    <string name="select_location">Select Location on Map</string>
    <string name="title">Address</string>
    <string name="select">Select Relevant Location</string>
    <string name="file_create_failed">Address File Create Failed</string>
    <string name="select_address">Select Address</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_not_granted">Permission Not Granted</string>
    <string name="delete_address_message">Are you sure you want to delete this address?</string>
    <string name="delete_address">Delete Address</string>
    <string name="yes">Yes</string>
    <string name="not_logged_in">Please login to continue</string>
    <string name="not_logged_in_btn">Login</string>
    <string name="invalid_mobile_number">Invalid Mobile Number</string>
    <string name="invalid_mobile_number_format">Invalid Mobile Format</string>
    <string name="invalid_mobile_number_missing">Missing Mobile Number</string>
    <string name="invalid_mobile_number_length">Mobile Number Must Have 10 Numbers</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="login_success">Login Success</string>
    <string name="user_not_found">Please Register First</string>
    <string name="add_to_cart_success">Product Adding Success</string>
    <string name="add_to_cart_failed">Product Adding Failed</string>
    <string name="add_to_cart_qty">Please Select Product Count</string>
    <string name="step_1_title">Personal Info</string>
    <string name="step_1_name">Name</string>
    <string name="step_1_mobile">Mobile</string>
    <string name="step_1_email">Email</string>
    <string name="step_2_title">Enter Your OTP Code</string>
    <string name="step_2_desc">The otp code has sent to your mobile by sms, check your message list</string>
    <string name="step_2_otp">Received OTP</string>
    <string name="step_2_resend">Resend OTP</string>
    <string name="step_2_resending">Resending OTP …</string>
    <string name="step_2_resendIn">Resend OTP In : </string>
    <string name="step_3_delivery_address">My Delivery Address</string>
    <string name="step_1_not_complete">Please Provide All Details</string>
    <string name="step_3_not_complete">Please Provide the Address</string>
    <string name="step_2_not_complete">Please Provide Correct OTP</string>
    <string name="step_3_done">Done</string>
    <string name="user_already_exist">User Already Exists</string>
    <string name="user_registration_success">User Registration Success</string>
    <string name="user_registration_failed">User Registration Failed</string>
    <string name="please_wait">Verifying …</string>
    <string name="tryAgain">Registration Failed Please Try Again !</string>
    <string name="name_required">Please Fill Name</string>
    <string name="mobile_required">Please Fill Mobile Number</string>
    <string name="email_required">Please Fill Mobile Email</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="otp_required">Please Fill OTP</string>
    <string name="address_required">Please Fill Address</string>
    <string name="nav_home">Home</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_cart">Cart</string>
    <string name="weight" translatable="false">00g</string>
    <string name="weight_price" translatable="false">Rs. 00.00</string>
    <string name="weight_qty" translatable="false">0</string>
    <string name="weight_minus" translatable="false">-</string>
    <string name="weight_plus" translatable="false">+</string>
    <string name="weight_zero_qty">Quantity can\'t be less than 0</string>
    <string name="discount">0% Off</string>
    <string name="discount_product_name">Product</string>
    <string name="discount_product_price" translatable="false">Rs. 5000.00</string>
    <string name="connection_lost">Internet Connection Lost</string>
    <string name="connection_unavailable">Internet Connection UnAvailable</string>
    <string name="connection_unavailable_title">Not Connected</string>
    <string name="connection_available">Internet Connection Available</string>
    <string name="welcome_title_txt">Welcome To Winlo Spices</string>
    <string name="welcome_language_txt">Select Your Language</string>
    <string name="welcome_language_change_txt">Your language preference can be changed at any time in Settings</string>
    <string name="language_1">English</string>
    <string name="language_2">Sinhala</string>
    <string name="addr_text">Now</string>
    <string name="addr_text_2">Select Location</string>
    <string name="search_placeholder">Search on Winlo</string>
    <string name="title_1">Products</string>
    <string name="category_1">All</string>
    <string name="category_2">Spices</string>
    <string name="category_3">Gift Packs</string>
    <string name="profile_img_desc">Profile Image</string>
    <string name="firebase_product_load_not_success">Something Went Wrong</string>
    <string name="product_view_title">Product View</string>
    <string name="product_view_Name">Product Name</string>
    <string name="product_view_Category">Seasoning</string>
    <string name="product_view_Select_Size">Select Size</string>
    <string name="add_to_cart_btn">Add to Cart</string>
    <string name="search_txt">Search</string>
    <string name="search_icon">Search Icon</string>
    <string name="cart_title">Cart</string>
    <string name="cart_btn_txt">Go to Checkout</string>
    <string name="total_items">Total Price</string>
    <string name="initial_zero" translatable="false">0.00</string>
    <string name="cart_empty">Cart is Empty</string>
    <string name="cart_qty" translatable="false">00 g</string>
    <string name="cart_remove">Remove </string>
    <string name="cart_removing">Removing … </string>
    <string name="cart_removed">Removed </string>
    <string name="cart_removed_success">Product Successfully Removed</string>
    <string name="cart_removed_failed">Product Removing Failed</string>
    <string name="cart_inner_zero" translatable="false">0</string>
    <string name="cart_inner_plus" translatable="false">+</string>
    <string name="cart_inner_minus" translatable="false">-</string>
    <string name="account_title">Account</string>
    <string name="account_name">Your Name</string>
    <string name="profile_edit">Profile Edit</string>
    <string name="profile_address">Address</string>
    <string name="profile_language">Language</string>
    <string name="profile_payment">Payment</string>
    <string name="profile_title">Profile</string>
    <string name="profile_name">Your Name</string>
    <string name="profile_mobile">Mobile</string>
    <string name="profile_save">Save</string>
    <string name="upload_success">Upload successful!</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="failed_to_delete_old_image">Failed to delete old image</string>
    <string name="language_title">Language</string>
    <string name="language_select">Select Language</string>
    <string name="payment_card_title">Payment</string>
    <string name="payment_card_list">Card List</string>
    <string name="payment_card_new">Add New Card</string>
    <string name="add_new_card_title">Add New Card</string>
    <string name="add_new_card_number">Card Number</string>
    <string name="add_new_card_name">Card Holder Name</string>
    <string name="add_new_card_date">Expiry Date</string>
    <string name="address_title">Address</string>
    <string name="address_add_new">Add New Address</string>
    <string name="add_new_address_title">Add New Address</string>
    <string name="new_address_line_1">Search Place</string>
    <string name="new_address_line_1_sample">Your Address</string>
    <string name="new_address_line_2">Address Line 2 (Optional)</string>
    <string name="new_address_province">Province</string>
    <string name="new_address_city">City</string>
    <string name="new_address_postal_code">Postal Code</string>
    <string name="new_address_save">Save</string>
    <string name="registration_title">Let\'s Create a Account</string>
    <string name="registration_step_1">My Info</string>
    <string name="registration_step_2">Verify</string>
    <string name="registration_step_3">Address</string>
    <string name="registration_step_next">Next</string>
    <string name="checkout_title">Checkout</string>
    <string name="checkout_address">Delivery Address</string>
    <string name="checkout_payment_method">Payment Method</string>
    <string name="checkout_payment_method_1">Pay Online</string>
    <string name="checkout_payment_method_2">Cash On Delivery</string>
    <string name="checkout_change_address">Change Address</string>
    <string name="checkout_name">Deliver Name</string>
    <string name="checkout_select_address">Select Address</string>
    <string name="checkout_mobile">Delivery Mobile</string>
    <string name="checkout_add_address">Add New Address</string>
    <string name="unit_price">Unit Price :</string>
    <string name="checkout_need_name">Please Fill Name</string>
    <string name="checkout_need_mobile">Please Fill Mobile</string>
    <string name="checkout_need_address">Please Select Address</string>
    <string name="checkout_need_product">Please Select Product to Purchase</string>
    <string name="payment_success">Payment Success</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="payment_cancelled">Payment Cancelled</string>
    <string name="order_placed_failed">Order Placed Failed</string>
    <string name="order_placed_success">Order Placed Success</string>
    <string name="thank_you_for_order">Thank You For Your Order</string>
    <string name="we_will_contact_you_soon">We Will Contact You Soon</string>
    <string name="email_receipt">Email Receipt</string>
    <string name="download_receipt">Download Receipt</string>
    <string name="done">Done</string>
    <string name="share">Share Receipt</string>
    <string name="receipt">Receipt</string>
    <string name="order_history_title">Order History</string>
    <string name="tract_order_title">Track My Order</string>
    <string name="tract_order_id">Order ID: </string>
    <string name="tract_order_status">Order Status</string>
    <string name="tract_order_confirmed">Order Confirmed</string>
    <string name="tract_order_processed">Order Processing</string>
    <string name="tract_order_delivering">Order Delivering</string>
    <string name="tract_order_delivered">Order Delivered</string>
    <string name="tract_order_sample">On 2025/12/11</string>
    <string name="login_title">Login to My Account</string>
    <string name="login_mobile_number">Mobile Number (Ex: 0700000000)</string>
    <string name="login_mobile_verify">Verify</string>
    <string name="login_mobile_register">Create New Account</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login_first">Please Login First</string>
    <string name="something_wrong">Something Went Wrong!</string>
    <string name="no_data_found">Could not Find Data</string>
    <string name="order_status">Order Status:</string>
    <string name="send_email">Send Email</string>
    <string name="add_adderss">Add Address</string>
    <string name="no_user">Cannot Find User</string>
    <string name="logout">Logout</string>
    <string name="refreshing">Refreshing ...</string>
    <string name="help_video_title">Quick Tour</string>
    <string name="help_contact">Contact Us</string>
    <string name="help_contact_message">Message</string>
    <string name="help_contact_message_send">Send Message</string>
    <string name="sms_permission_granted">Permission Granted</string>
</resources>