<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    tools:context=".OrderSuccessActivity">

    <TextView
        android:id="@+id/textView78"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/thank_you_for_order"
        android:textColor="@color/green_2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView79"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/we_will_contact_you_soon"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView78"
        app:layout_constraintStart_toStartOf="@+id/textView78"
        app:layout_constraintTop_toBottomOf="@+id/textView78" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textView78"
        app:layout_constraintStart_toStartOf="@+id/textView78"
        app:layout_constraintTop_toBottomOf="@+id/textView79"
        app:srcCompat="@drawable/order_complete" />

    <Button
        android:id="@+id/button20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/green_2"
        android:text="@string/email_receipt"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/textView78"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView78"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <Button
        android:id="@+id/button21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green_2"
        android:text="@string/download_receipt"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/button20"
        app:layout_constraintStart_toStartOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/black_1"
        android:text="@string/done"
        android:textSize="16sp"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button21"
        app:layout_constraintStart_toStartOf="@+id/button21" />

    <TextView
        android:id="@+id/textView81"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/share"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>