<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView74"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/cart_qty"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button17" />

    <TextView
        android:id="@+id/textView76"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/weight_price"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView74"
        app:layout_constraintStart_toEndOf="@+id/textView74"
        app:layout_constraintTop_toTopOf="@+id/textView74" />

    <TextView
        android:id="@+id/textView80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/cart_inner_zero"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button18"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintTop_toTopOf="@+id/button18" />

    <Button
        android:id="@+id/button17"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/grey_2"
        android:paddingTop="-2dp"
        android:paddingBottom="1dp"
        android:text="@string/cart_inner_plus"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textView80"
        app:layout_constraintEnd_toStartOf="@+id/textView80"
        app:layout_constraintTop_toTopOf="@+id/textView80" />

    <Button
        android:id="@+id/button18"
        android:layout_width="60dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/grey_2"
        android:paddingTop="-2dp"
        android:paddingBottom="10dp"
        android:text="@string/cart_inner_minus"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <View
        android:id="@+id/divider5"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button17"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/unit_price"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/textView28"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toTopOf="@+id/textView28" />
</androidx.constraintlayout.widget.ConstraintLayout>